--- a/app/src/main/res/layout/group_items.xml
+++ b/app/src/main/res/layout/group_items.xml
@@ -6,6 +6,7 @@
         android:id="@+id/heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="5dp"
         android:paddingLeft="35sp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold"
