--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -32,6 +32,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -47,7 +48,7 @@
 
                         <TextView
                             android:id="@+id/temp_high"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/high"
@@ -55,7 +56,7 @@
 
                         <TextView
                             android:id="@+id/high_value"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:textSize="24sp" />
@@ -69,7 +70,7 @@
 
                         <TextView
                             android:id="@+id/temp_low"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:text="@string/low"
@@ -77,7 +78,7 @@
 
                         <TextView
                             android:id="@+id/low_value"
-                            android:layout_width="0dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:textSize="24sp" />
@@ -86,11 +87,20 @@
 
                 </LinearLayout>
 
-                <ImageView
-                    android:layout_weight="1"
-                    android:id="@+id/weatherstatus"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+
+                        android:id="@+id/weatherstatus"
+                        android:layout_width="70dp"
+                        android:layout_height="70dp"/>
+
+
+                </LinearLayout>
+
+
 
             </LinearLayout>
 
